Removed some meta tags from head

--- a/Kasia Trilling.html
+++ b/Kasia Trilling.html
@@ -1,61 +1,22 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)http://www.kasiatrilling.com/ -->
-<html
-  lang="en-US"
-  class="yui3-js-enabled js flexbox canvas canvastext webgl no-touch hashchange history draganddrop rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms no-csstransforms3d csstransitions video audio svg inlinesvg svgclippaths wf-proximanova-n6-active wf-proximanova-i7-active wf-futurapt-n7-active wf-proximanova-n7-active wf-proximanova-i6-active wf-effra-n4-active wf-active"
-  style=""
-  id="yui_3_17_2_1_1616086600641_687"
->
-  <div
-    id="yui3-css-stamp"
-    style="position: absolute !important; visibility: hidden !important"
-  ></div>
+<html lang="en-US">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-    <!-- This is Squarespace. -->
-    <!-- charlie-mckay-ci0v -->
-    <!--<base href="">-->
     <base href="." />
 
     <title>Kasia Trilling</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://images.squarespace-cdn.com/content/v1/54870f34e4b06c2e47c70faf/1439479809762-F8EAP4XQD9KKMBBFRZZC/ke17ZwdGBToddI8pDm48kHgiChg-8qpTDpxqxxkK8FuoCXeSvxnTEQmG4uwOsdIceAoHiyRoc52GMN5_2H8Wp6wgInDrV92sKq6R1hL7-vpRnQ3oB_nVbZLT-YkAJ1oVvxgFI2Q9vYX2Htd1M-iimQ/favicon.ico"
-    />
+
     <link rel="canonical" href="http://www.kasiatrilling.com/" />
-    <meta property="og:site_name" content="Kasia Trilling " />
-    <meta property="og:title" content="Kasia Trilling" />
-    <meta property="og:url" content="http://www.charliemckay.com" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Kasia Trilling is a photographer who works mainly across food, fashion and still life formats but shoots portraiture and documentary work too."
-    />
+
     <meta itemprop="name" content="Kasia Trilling" />
-    <meta itemprop="url" content="http://www.charliemckay.com" />
-    <meta
-      itemprop="description"
-      content="Kasia Trilling is a photographer who works mainly across food, fashion and still life formats but shoots portraiture and documentary work too."
-    />
-    <meta name="twitter:title" content="Kasia Trilling" />
-    <meta name="twitter:url" content="http://www.charliemckay.com" />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:description"
-      content="Kasia Trilling is a photographer who works mainly across food, fashion and still life formats but shoots portraiture and documentary work too."
-    />
-    <meta
-      name="description"
-      content="Kasia Trilling is a photographer who works mainly across food, fashion and 
-still life formats but shoots portraiture and documentary work too."
-    />
-    <link rel="preconnect" href="https://images.squarespace-cdn.com/" />
+    <meta itemprop="url" content="http://www.kasiatrilling.com" />
+    <!-- TODO Add description -->
+    <meta itemprop="description" content="Kasia Trilling." />
+    <meta name="description" content="Kasia Trilling." />
+
     <script
       type="text/javascript"
       src="./Kasia Trilling_files/dyr1juTLe6K949jZ87jgcetPcLvTuOMMdkE08RlxBfbfe79IfFHN4UJLFRbh52jhWD9X52S3ZRwXZQsKw2ZRwc9XFhwaweZyZy79MkG0jAFu-WsoShFGZAsude80ZkoRdhXCHKoyjamTiY8Djhy8ZYmC-Ao1Oco8if37OcBDOcu8OfG0jhyyScUTZPuljhlypPuR-QghO1FUiABkZWF3jAF8OcFzdP37O1FUiABkZWF3jAF8ShFGZAsude80.js"
@@ -388,10 +349,10 @@ still life formats but shoots portraiture and documentary work too."
             6: true,
             3: true,
           },
-          authenticUrl: "http://www.charliemckay.com",
+          authenticUrl: "http://www.kasiatrilling.com",
           internalUrl: "http://charlie-mckay-ci0v.squarespace.com",
-          baseUrl: "http://www.charliemckay.com",
-          primaryDomain: "www.charliemckay.com",
+          baseUrl: "http://www.kasiatrilling.com",
+          primaryDomain: "www.kasiatrilling.com",
           sslSetting: 1,
           isHstsEnabled: false,
           socialAccounts: [
@@ -629,7 +590,7 @@ still life formats but shoots portraiture and documentary work too."
     </script>
     <script type="application/ld+json">
       {
-        "url": "http://www.charliemckay.com",
+        "url": "http://www.kasiatrilling.com",
         "name": "Kasia Trilling ",
         "description": "",
         "@context": "http://schema.org",
