Remove old social media accounts from head

--- a/Kasia Trilling.html
+++ b/Kasia Trilling.html
@@ -97,7 +97,7 @@
       Static.SQUARESPACE_CONTEXT = {
         website: {
           id: "54870f34e4b06c2e47c70faf",
-          identifier: "charlie-mckay-ci0v",
+          identifier: "kt",
           websiteType: 1,
           contentModifiedOn: 1612221300786,
           cloneable: false,
@@ -122,38 +122,12 @@
             3: true,
           },
           authenticUrl: "http://www.kasiatrilling.com",
-          internalUrl: "http://charlie-mckay-ci0v.squarespace.com",
+          internalUrl: "http://www.kasiatrilling.com",
           baseUrl: "http://www.kasiatrilling.com",
           primaryDomain: "www.kasiatrilling.com",
           sslSetting: 1,
           isHstsEnabled: false,
-          socialAccounts: [
-            {
-              serviceId: 10,
-              userId: "16593536",
-              userName: "charliemckay",
-              screenname: "charliemckay",
-              addedOn: 1418139616616,
-              profileUrl: "http://instagram.com/charliemckay",
-              iconUrl:
-                "https://instagramimages-a.akamaihd.net/profiles/profile_16593536_75sq_1360100234.jpg",
-              collectionId: "548717e0e4b035cc88e5c8a9",
-              iconEnabled: true,
-              serviceName: "instagram",
-            },
-            {
-              serviceId: 19,
-              userId: "28358810062033111",
-              screenname: "Kasia Trilling",
-              addedOn: 1434736979950,
-              profileUrl: "https://www.pinterest.com/charliemckay/",
-              iconUrl:
-                "http://media-cache-ak0.pinimg.com/avatars/charliemckay_1334098919_60.jpg",
-              metaData: { service: "pinterest" },
-              iconEnabled: true,
-              serviceName: "pinterest",
-            },
-          ],
+          socialAccounts: [],
           typekitId: "",
           statsMigrated: false,
           imageMetadataProcessingEnabled: true,
