--- a/Kasia Trilling.html
+++ b/Kasia Trilling.html
@@ -240,7 +240,7 @@
                 data-shrink-original-size="14"
                 style="letter-spacing: 0em"
               >
-                <a href="http://www.kasiatrilling.com/"> Kasia Trilling </a>
+                <img src="./src/assets/logo.png" width="80px" height="80px" />
               </h1>
             </div>
 
