Rename Kasia Trilling html to index

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               >
                 <ul>
                   <li class="page-collection">
-                    <a href="http://www.kasiatrilling.com/about">About</a>
+                    <a href="http://www.kasiatrilling.com/about">ABOUT</a>
                   </li>
                 </ul>
               </nav>
