--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="page-collection">
-                  <a href="http://www.kasiatrilling.com/about">About</a>
+                  <a href="./about.html">About</a>
                 </li>
               </ul>
             </nav>
@@ -296,7 +296,7 @@
               >
                 <ul>
                   <li class="page-collection">
-                    <a href="http://www.kasiatrilling.com/about">ABOUT</a>
+                    <a href="./about.html">ABOUT</a>
                   </li>
                 </ul>
               </nav>
