Fixed links between home and about page

--- a/about.html
+++ b/about.html
@@ -181,8 +181,8 @@
           <div class="wrapper">
             <nav class="main-nav mobile-nav">
               <ul>
-                <li class="gallery-collection active-link">
-                  <a href="http://www.kasiatrilling.com/">Home</a>
+                <li class="gallery-collection">
+                  <a href="./index.html">Home</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -216,7 +216,7 @@
             </nav>
             <nav class="main-nav mobile-nav">
               <ul>
-                <li class="page-collection">
+                <li class="page-collection active-link">
                   <a href="./about.html">About</a>
                 </li>
               </ul>
@@ -256,8 +256,8 @@
                 class="main-nav dropdown-click desktop-nav"
               >
                 <ul>
-                  <li class="gallery-collection active-link">
-                    <a href="http://www.kasiatrilling.com/">Home</a>
+                  <li class="gallery-collection">
+                    <a href="index.html">Home</a>
                   </li>
 
                   <li class="gallery-collection">
@@ -295,7 +295,7 @@
                 class="main-nav dropdown-click desktop-nav"
               >
                 <ul>
-                  <li class="page-collection">
+                  <li class="page-collection active-link">
                     <a href="./about.html">ABOUT</a>
                   </li>
                 </ul>
