--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection active-link">
-                  <a href="http://www.kasiatrilling.com/">Home</a>
+                  <a href="./index.html">Home</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -257,7 +257,7 @@
               >
                 <ul>
                   <li class="gallery-collection active-link">
-                    <a href="http://www.kasiatrilling.com/">Home</a>
+                    <a href="./index.html">Home</a>
                   </li>
 
                   <li class="gallery-collection">
