Add art direction page with two assets

--- a/about.html
+++ b/about.html
@@ -186,9 +186,7 @@
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="http://www.kasiatrilling.com/art-direction"
-                    >Art direction</a
-                  >
+                  <a href="./art-direction.html">Art direction</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -261,9 +259,7 @@
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="http://www.kasiatrilling.com/art-direction"
-                      >Art direction</a
-                    >
+                    <a href="./art-direction.html">Art direction</a>
                   </li>
 
                   <li class="gallery-collection">
