--- a/art-direction.html
+++ b/art-direction.html
@@ -181,11 +181,11 @@
           <div class="wrapper">
             <nav class="main-nav mobile-nav">
               <ul>
-                <li class="gallery-collection active-link">
+                <li class="gallery-collection">
                   <a href="./index.html">Home</a>
                 </li>
 
-                <li class="gallery-collection">
+                <li class="gallery-collection active-link">
                   <a href="./art-direction.html">Art direction</a>
                 </li>
 
@@ -254,11 +254,11 @@
                 class="main-nav dropdown-click desktop-nav"
               >
                 <ul>
-                  <li class="gallery-collection active-link">
+                  <li class="gallery-collection">
                     <a href="./index.html">Home</a>
                   </li>
 
-                  <li class="gallery-collection">
+                  <li class="gallery-collection active-link">
                     <a href="./art-direction.html">Art direction</a>
                   </li>
 
@@ -343,8 +343,8 @@
                     >
                       <img
                         class="load-false loaded"
-                        data-src="./src/assets/1.jpeg"
-                        data-image="./src/assets/1.jpeg"
+                        data-src="./src/assets/art-direction/ANNASUI_artdirection.jpg"
+                        data-image="./src/assets/art-direction/ANNASUI_artdirection.jpg"
                         data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
@@ -352,7 +352,7 @@
                         data-type="image"
                         data-parent-ratio="1.8"
                         data-image-resolution="2500w"
-                        src="./src/assets/1.jpeg"
+                        src="./src/assets/art-direction/ANNASUI_artdirection.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
@@ -364,6 +364,36 @@
                       />
                     </div>
                     <!-- Main page single photo END -->
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ANNASUI_layout.jpg"
+                        data-image="./src/assets/art-direction/ANNASUI_layout.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ANNASUI_layout.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
                   </div>
                   <div class="overlay-controls left-control"></div>
                   <div
