--- a/art-direction.html
+++ b/art-direction.html
@@ -394,6 +394,396 @@
                         "
                       />
                     </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ASOS_Beauty.jpg"
+                        data-image="./src/assets/art-direction/ASOS_Beauty.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ASOS_Beauty.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
+                        data-image="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
+                        data-image="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
+                        data-image="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
+                        data-image="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_ad.jpg"
+                        data-image="./src/assets/art-direction/WGSN_ad.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_ad.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_branding.jpg"
+                        data-image="./src/assets/art-direction/WGSN_branding.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_branding.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_devices_p1.jpg"
+                        data-image="./src/assets/art-direction/WGSN_devices_p1.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_devices_p1.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_devices_p2.jpg"
+                        data-image="./src/assets/art-direction/WGSN_devices_p2.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_devices_p2.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_flyer.jpg"
+                        data-image="./src/assets/art-direction/WGSN_flyer.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_flyer.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_rollerbanner.jpg"
+                        data-image="./src/assets/art-direction/WGSN_rollerbanner.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_rollerbanner.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
+                        data-image="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/art-direction/WGSN_tradeshow.jpg"
+                        data-image="./src/assets/art-direction/WGSN_tradeshow.jpg"
+                        data-image-dimensions="2500x1668"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        data-image-resolution="2500w"
+                        src="./src/assets/art-direction/WGSN_tradeshow.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: 784px;
+                          position: relative;
+                        "
+                      />
+                    </div>
                   </div>
                   <div class="overlay-controls left-control"></div>
                   <div
