--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="http://www.kasiatrilling.com/design">Design</a>
+                  <a href="./design">Design</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -263,7 +263,7 @@
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="http://www.kasiatrilling.com/design">Design</a>
+                    <a href="./design">Design</a>
                   </li>
 
                   <li class="gallery-collection">
