Fix image sizes by not forcing specific dimensions

--- a/art-direction.html
+++ b/art-direction.html
@@ -345,20 +345,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ANNASUI_artdirection.jpg"
                         data-image="./src/assets/art-direction/ANNASUI_artdirection.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ANNASUI_artdirection.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -376,20 +374,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ANNASUI_layout.jpg"
                         data-image="./src/assets/art-direction/ANNASUI_layout.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ANNASUI_layout.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -406,20 +402,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ASOS_Beauty.jpg"
                         data-image="./src/assets/art-direction/ASOS_Beauty.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ASOS_Beauty.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -436,20 +430,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
                         data-image="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ASOS_CTAs_artdirection.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -466,20 +458,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
                         data-image="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ASOS_CTAs_artdirection2.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -496,20 +486,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
                         data-image="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ASOS_Mens_grooming.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -526,20 +514,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
                         data-image="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/ASOS_Valentines_artdirection.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -556,20 +542,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_ad.jpg"
                         data-image="./src/assets/art-direction/WGSN_ad.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_ad.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -586,20 +570,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_branding.jpg"
                         data-image="./src/assets/art-direction/WGSN_branding.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_branding.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -616,20 +598,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_devices_p1.jpg"
                         data-image="./src/assets/art-direction/WGSN_devices_p1.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_devices_p1.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -646,20 +626,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_devices_p2.jpg"
                         data-image="./src/assets/art-direction/WGSN_devices_p2.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_devices_p2.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -676,20 +654,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_flyer.jpg"
                         data-image="./src/assets/art-direction/WGSN_flyer.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_flyer.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -706,20 +682,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_rollerbanner.jpg"
                         data-image="./src/assets/art-direction/WGSN_rollerbanner.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_rollerbanner.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -736,20 +710,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
                         data-image="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_single_doublepage_ad.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
@@ -766,20 +738,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/art-direction/WGSN_tradeshow.jpg"
                         data-image="./src/assets/art-direction/WGSN_tradeshow.jpg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/art-direction/WGSN_tradeshow.jpg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
