--- a/index.html
+++ b/index.html
@@ -345,20 +345,18 @@
                         class="load-false loaded"
                         data-src="./src/assets/1.jpeg"
                         data-image="./src/assets/1.jpeg"
-                        data-image-dimensions="2500x1668"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
-                        data-image-resolution="2500w"
                         src="./src/assets/1.jpeg"
                         style="
                           font-size: 0px;
                           left: 118.47px;
                           top: 0px;
                           width: 1175.06px;
-                          height: 784px;
+                          height: auto;
                           position: relative;
                         "
                       />
