Fix TheGreatEscape_logo file extension

--- a/design.html
+++ b/design.html
@@ -1044,8 +1044,8 @@
                     >
                       <img
                         class="load-false loaded"
-                        data-src="./src/assets/design/TheGreatEscape_logo.jpg"
-                        data-image="./src/assets/design/TheGreatEscape_logo.jpg"
+                        data-src="./src/assets/design/TheGreatEscape_logo.png"
+                        data-image="./src/assets/design/TheGreatEscape_logo.png"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
                         data-image-id="601887d25fbc185342a5f0b8"
